Change tablelayout bug

--- a/pinet/widgets/tablelayout/scss/pinet_tablelayout.scss
+++ b/pinet/widgets/tablelayout/scss/pinet_tablelayout.scss
@@ -10,28 +10,20 @@
 		}
 		#main {
 			width: 100%;
-			> .scroll {
-				> .table-container {
-					height: 100%;
-				}
-			}
 		}
 		#content {
 			height: 100%;
-			.table-col:first-child {
-				> .scroll {
-					height: 100%;
-				}
-			}
 		}
 		#workbench {
 			width: 100%;
 		}
-
-		#workbench .table-container {
-			.table-row:last-child {
+		#scrollcontent {
+			>.table-col {
+				position: relative;
+				overflow: auto;
 				height: 100%;
 			}
+			height: 100%;
 		}
 	}
 	@-moz-document url-prefix() {
